gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/disable_new.d
version https://git-lfs.github.com/spec/v1
oid sha256:07d0363768ad7d213bff768006fd572b306ab5ee4063c86007ce39c1ffb8facf
size 542
